2011-01-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/network.c (write_stream_connection4): Fix format string in
	debug message. Spotted by Felix Wolfsteller.

2011-01-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* README: Remove outdated information, redirect readers to the INSTALL
	file instead.

2011-01-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Added hint on wmi cient library.

	* doc/wmi-howto.txt: Adpated to cmake messages and added
	note on library name.

2011-01-25  Stephan Kleine

	* omp/CMakeLists.txt, misc/CMakeLists.txt, hg/CMakeLists.txt: fix
	link_directories for out of source builds.

2011-01-25  Stephan Kleine

	* CMakeLists.txt: install man pages into proper directory.

2011-01-25  Christian Kuersteiner <ckuerste@gmx.ch>

	* misc/network.c (open_socket): Removed unnecessary parameter.

2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeList.txt: Add option to ignore warnings regarding
	unprototyped calls in nasl/regex.c to fix the build process with
	recent versions of openSUSE.

	* INSTALL: Add section documenting compiler options.

2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/CMakeLists.txt: New. Added missing file required to build
	documentation.

2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeList.txt: Fix linking of nasl libraries with other parts
	of openvas-libraries to fix build issue with newer cmake versions.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set to 4.0+rc4

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Quick fixes before release.

	* TODO: Removed. The last two entries are not of notable
	relevance anymore (AIX and module dependency problem).

	* CMakeLists.txt: Add libopenvas-config for CPack.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 4.0+rc3 release.
