@@ -31,7 +31,7 @@
 # for libdir and includedir
 LIBDIR=@LIBDIR@
 INCLUDEDIR=@INCLUDEDIR@
-VERSION=@OPENVASLIB_VERSION@
+VERSION=@LIBOPENVASCONFIG_VERSION@
 HAVE_WMI="@WMICLIENT@"
 
 usage()
